# obs-utils

./: .gitignore  README.md  install_all.sh  pyproject.toml
config/: default_certus_config.yaml  default_encoders_config.yaml
install_scripts/: install_cameras.sh  install_ids_cam.sh
obs_cameras/: alvium.py  base.py  ids.py  zwo.py
obs_certus/: monitor.py  run.py
obs_cli/: cli.py
obs_controller/: controller.py
obs_display/: display.py
obs_encoders/: monitor.py  run.py
obs_target/: sky_target.py  sky_test.py  target.py  zafiro_azel_target.py
obs_utils/: config.py
run_scripts/: alvium_508_test.py  main.py  test_scoti.py
varda-w4/: gs1_pc1.py
varda-w6/: 20260512_GS_Az-El_data.csv  20260516_GS_Az-El_data.csv  20260518_GS_Az-El_data.csv  encoders_config.yaml  swir_1.yaml  swir_1312.yaml  swir_2.yaml  swir_bottom.yaml  swir_middle.yaml  swir_nonspecific.yaml  swir_top.yaml  w6_bottom.py  w6_dev.py  w6_middle.py  w6_swir1.py  w6_swir2.py  w6_top.py  w6_unisq.py
